Lots of unit test cleanups to prevent random failures on various build machines and reduce the amount of logging that occurs. All tests should reliably pass after this commit.