@@ -191,8 +191,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.2</version>
+				<version>2.10</version>
 				<configuration>
+					<argLine>-Xmx512m -XX:MaxPermSize=128m</argLine> 
 					<forkMode>once</forkMode>
 					<!-- <parallel>classes</parallel>  -->
 					<!--<testFailureIgnore>true</testFailureIgnore>-->
